Properly update the command length on BSD.

BUG: 139985

svn path=/trunk/extragear/multimedia/k3b/; revision=622839